--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ build-backend = "hatchling.build"
 managed = true
 dev-dependencies = [
     "ruff>=0.14.7",
+    "pytest>=9.0.1",
+    "pytest-asyncio>=1.3.0",
 ]
 
 [tool.hatch.metadata]
